--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ obj/
 riderModule.iml
 /_ReSharper.Caches/
 .idea/.idea.GithubActionsDemo/.idea/encodings.xml
+/.idea/.idea.GithubActionsDemo/.idea
+/.vs/GithubActionsDemo/FileContentIndex
